# Patient-Advocate

./: .gitignore  Patient Advocate Calendar Mod.txt  Patient Advocate Strategy 2026.docx  README.md  SKILL.md  conftest.py  patient advocate routing sytem.py  patient advocate vision system.py  pyproject.toml
docs/: ARCHITECTURE_AND_ETHICS.md
migrations/: env.py
migrations/versions/: 0001_create_transparency_report.py
src/patient_advocate/agents/: vision_agent.py
src/patient_advocate/api/: app.py  hitl_router.py  hitl_service.py  rlhf_store.py  schemas.py  suggestion_store.py
src/patient_advocate/calendar_engine/: calendar_engine.py
src/patient_advocate/core/: __init__.py  config.py  exceptions.py  models.py  state.py
src/patient_advocate/db/: engine.py  glass_box_logger.py  orm.py
src/patient_advocate/ethics/: dashboard_router.py  ethics_agent.py  ethics_screener.py
src/patient_advocate/routing/: __init__.py  patient_advocate_routing_system.py
tests/test_agents/: test_vision_agent.py
tests/test_api/: test_hitl.py
tests/test_calendar_engine/: test_calendar_engine.py
tests/test_db/: test_glass_box_logger.py
tests/test_routing/: test_routing.py
