[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patient-advocate"
version = "0.1.0"
description = "Level 2 Multi-agent Personal Medical AI — Patient Rights Force-Multiplier"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "Craig McClurkin", email = "craig.mcclurkin@louisville.edu"},
]
readme = "README.md"

dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pillow>=10.0",
    "pytesseract>=0.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
